# SimpleFileManager

./: CMakeLists.txt  README.md
src/: FileManager.cpp  FileManager.h  main.cpp
